QQmlJSScope: Create list type for enums

When creating the QQmlJSScopes for enums, we would not resolve their
corresponding list type, leading to confused qmllint warnings about the
type not being found.
Fix this by immediately creating the corresponding list type when an
enum tpye is created.

Fixes: QTBUG-137256
Change-Id: Ic0479b19467820838426a6f6fe5288cad62e3ff7
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 70a38fc67a5a8e311939b24f386addee642c766a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 01990eb7bf47e0d0b75528ffd76fe1fbd88c3d65)
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 78fd1b865c2611bbeb51fb56d97a9d6a73092c65)