tests/auto/qml/qmllint/data/enumListTest.qml
@@ -1,0 +1,8 @@
+import EnumList
+import QtQml
+
+MyCustomType {
+    id: myType
+    requiredConditions: [Configuration.Condition.A, Configuration.Condition.C]
+}
+
